# uuid-readable-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: main_bench.rs
src/: lib.rs
src/data/: adjectives.rs  animals.rs  mod.rs  names.rs  personal_nouns.rs  places.rs  verbs.rs
