[package]
name = "uuid-readable-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
bench = false

[[bench]]
name = "main_bench"
harness = false
